:zap: Catnip: Fix double scrollbars in the modal with variable manager

--- a/src/styl/tags/shared/scriptables/catnip-library.styl
+++ b/src/styl/tags/shared/scriptables/catnip-library.styl
@@ -26,6 +26,8 @@ catnip-library
     .&-aVariableManager
         max-width 80vw
         width fit-content
+        .aTableWrap
+            max-height unset
     .&-CategoriesShortcuts.aButtonGroup.vertical
         flex 0 0 4rem
         overflow-y overlay
